proyecto.output
Terminals unused in grammar

    LPAREN
    RPAREN


Grammar

    0 $accept: S $end

    1 S: fichero

    2 fichero: compuesto
    3        | compuesto SALTO fichero

    4 compuesto: ELEMENTO
    5          | ELEMENTO SUBINDICE
    6          | secuencia_elementos

    7 secuencia_elementos: ELEMENTO ELEMENTO
    8                    | ELEMENTO ELEMENTO SUBINDICE
    9                    | ELEMENTO SUBINDICE ELEMENTO
   10                    | ELEMENTO SUBINDICE ELEMENTO SUBINDICE
   11                    | ELEMENTO secuencia_elementos
   12                    | ELEMENTO SUBINDICE secuencia_elementos


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    ELEMENTO <str> (258) 4 5 7 8 9 10 11 12
    SUBINDICE <num> (259) 5 8 9 10 12
    SALTO (260) 3
    LPAREN (261)
    RPAREN (262)


Nonterminals, with rules where they appear

    $accept (8)
        on left: 0
    S (9)
        on left: 1
        on right: 0
    fichero (10)
        on left: 2 3
        on right: 1 3
    compuesto <str> (11)
        on left: 4 5 6
        on right: 2 3
    secuencia_elementos <str> (12)
        on left: 7 8 9 10 11 12
        on right: 6 11 12


State 0

    0 $accept: • S $end

    ELEMENTO  shift, and go to state 1

    S                    go to state 2
    fichero              go to state 3
    compuesto            go to state 4
    secuencia_elementos  go to state 5


State 1

    4 compuesto: ELEMENTO •
    5          | ELEMENTO • SUBINDICE
    7 secuencia_elementos: ELEMENTO • ELEMENTO
    8                    | ELEMENTO • ELEMENTO SUBINDICE
    9                    | ELEMENTO • SUBINDICE ELEMENTO
   10                    | ELEMENTO • SUBINDICE ELEMENTO SUBINDICE
   11                    | ELEMENTO • secuencia_elementos
   12                    | ELEMENTO • SUBINDICE secuencia_elementos

    ELEMENTO   shift, and go to state 6
    SUBINDICE  shift, and go to state 7

    $default  reduce using rule 4 (compuesto)

    secuencia_elementos  go to state 8


State 2

    0 $accept: S • $end

    $end  shift, and go to state 9


State 3

    1 S: fichero •

    $default  reduce using rule 1 (S)


State 4

    2 fichero: compuesto •
    3        | compuesto • SALTO fichero

    SALTO  shift, and go to state 10

    $default  reduce using rule 2 (fichero)


State 5

    6 compuesto: secuencia_elementos •

    $default  reduce using rule 6 (compuesto)


State 6

    7 secuencia_elementos: ELEMENTO • ELEMENTO
    7                    | ELEMENTO ELEMENTO •
    8                    | ELEMENTO • ELEMENTO SUBINDICE
    8                    | ELEMENTO ELEMENTO • SUBINDICE
    9                    | ELEMENTO • SUBINDICE ELEMENTO
   10                    | ELEMENTO • SUBINDICE ELEMENTO SUBINDICE
   11                    | ELEMENTO • secuencia_elementos
   12                    | ELEMENTO • SUBINDICE secuencia_elementos

    ELEMENTO   shift, and go to state 6
    SUBINDICE  shift, and go to state 11

    $default  reduce using rule 7 (secuencia_elementos)

    secuencia_elementos  go to state 8


State 7

    5 compuesto: ELEMENTO SUBINDICE •
    9 secuencia_elementos: ELEMENTO SUBINDICE • ELEMENTO
   10                    | ELEMENTO SUBINDICE • ELEMENTO SUBINDICE
   12                    | ELEMENTO SUBINDICE • secuencia_elementos

    ELEMENTO  shift, and go to state 12

    $default  reduce using rule 5 (compuesto)

    secuencia_elementos  go to state 13


State 8

   11 secuencia_elementos: ELEMENTO secuencia_elementos •

    $default  reduce using rule 11 (secuencia_elementos)


State 9

    0 $accept: S $end •

    $default  accept


State 10

    3 fichero: compuesto SALTO • fichero

    ELEMENTO  shift, and go to state 1

    fichero              go to state 14
    compuesto            go to state 4
    secuencia_elementos  go to state 5


State 11

    8 secuencia_elementos: ELEMENTO ELEMENTO SUBINDICE •
    9                    | ELEMENTO SUBINDICE • ELEMENTO
   10                    | ELEMENTO SUBINDICE • ELEMENTO SUBINDICE
   12                    | ELEMENTO SUBINDICE • secuencia_elementos

    ELEMENTO  shift, and go to state 12

    $default  reduce using rule 8 (secuencia_elementos)

    secuencia_elementos  go to state 13


State 12

    7 secuencia_elementos: ELEMENTO • ELEMENTO
    8                    | ELEMENTO • ELEMENTO SUBINDICE
    9                    | ELEMENTO • SUBINDICE ELEMENTO
    9                    | ELEMENTO SUBINDICE ELEMENTO •
   10                    | ELEMENTO • SUBINDICE ELEMENTO SUBINDICE
   10                    | ELEMENTO SUBINDICE ELEMENTO • SUBINDICE
   11                    | ELEMENTO • secuencia_elementos
   12                    | ELEMENTO • SUBINDICE secuencia_elementos

    ELEMENTO   shift, and go to state 6
    SUBINDICE  shift, and go to state 15

    $default  reduce using rule 9 (secuencia_elementos)

    secuencia_elementos  go to state 8


State 13

   12 secuencia_elementos: ELEMENTO SUBINDICE secuencia_elementos •

    $default  reduce using rule 12 (secuencia_elementos)


State 14

    3 fichero: compuesto SALTO fichero •

    $default  reduce using rule 3 (fichero)


State 15

    9 secuencia_elementos: ELEMENTO SUBINDICE • ELEMENTO
   10                    | ELEMENTO SUBINDICE • ELEMENTO SUBINDICE
   10                    | ELEMENTO SUBINDICE ELEMENTO SUBINDICE •
   12                    | ELEMENTO SUBINDICE • secuencia_elementos

    ELEMENTO  shift, and go to state 12

    $default  reduce using rule 10 (secuencia_elementos)

    secuencia_elementos  go to state 13
